infrastructure/sso/lldap/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lldap
  namespace: authelia
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-cluster-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: lldap.patch.stplabs.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lldap
                port:
                  number: 17170
  tls:
    - hosts:
        - lldap.patch.stplabs.io
      secretName: lldap-tls
